--- a/.github/workflows/auto-label-pr.yml
+++ b/.github/workflows/auto-label-pr.yml
@@ -7,4 +7,4 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: checkout
-        uses: kiwiupover/auto-label-pr-by-branch-name@v0.0.1
+        uses: ./
