--- a/.github/workflows/auto-label-pr.yml
+++ b/.github/workflows/auto-label-pr.yml
@@ -6,5 +6,9 @@ jobs:
   auto-label:
     runs-on: ubuntu-latest
     steps:
+      - name: Checkout
+        uses: actions/checkout@v3
       - name: Auto PR label
         uses: ./
+        with:
+          token: ${{ secrets.GITHUB_TOKEN }}
