--- a/action.yml
+++ b/action.yml
@@ -13,10 +13,10 @@ inputs:
     default: ${{ github.token }}
     required: true
 
-#outputs:
-#  result:
-#    description: action result
+outputs:
+ result:
+   description: action result
 
 runs:
-  using: 'node12'
+  using: 'node16'
   main: 'dist/index.js'
