--- a/.github/workflows/auto-label-pr.yml
+++ b/.github/workflows/auto-label-pr.yml
@@ -12,3 +12,5 @@ jobs:
         uses: ./
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
+      - name: Get the output time
+        run: echo "The time was ${{ steps.Auto_PR_label.outputs.time }}"
