--- a/.github/workflows/auto-label-pr.yml
+++ b/.github/workflows/auto-label-pr.yml
@@ -13,4 +13,4 @@ jobs:
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
       - name: Get the output time
-        run: echo "The time was ${{ steps.Auto_PR_label.outputs.time }}"
+        run: echo "The time was ${{ steps.auto_pr_label.outputs.time }}"
